# aiclient-llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
aiclient/: __init__.py  agent.py  client.py  middleware.py  resilience.py
aiclient/cache/: __init__.py  semantic.py
aiclient/mcp/: __init__.py  client.py  manager.py
aiclient/models/: chat.py
aiclient/tools/: policy.py
docs/: features.md  getting_started.md  middleware.md
examples/: demo_mcp.py
tests/: test_agent_mcp.py  test_concurrency_reproduction.py  test_mcp.py  test_middleware.py  test_resilience_advanced.py  test_semantic_cache.py
workflows/: publish-pypi.yml  publish-testpypi.yml
